--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "monobank"
 version = "0.1.0"
 description = "Monobank.ua API implementation"
-authors = ["Vitaliy Kucheriavyi <ppr.vitaly@gmail.com>"]
+authors = ["Vitaliy Kucheriavyi <ppr.vitaly@gmail.com>", "Mykola Soloduha <mykola.soloduha@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
